# GovAgent-IQ-5DAIICG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  __init__.py  app.py  auditor.py  company_registry.json  config.py  gdpr_rules.json  ingestion.py  pipeline.py  pyproject.toml  risk_assessor.py  schemas.py  test_auditor.py  test_ingestion.py  test_risk_assessor.py  vendor_contract_acme.md
