[project]
name = "govagent-iq"
version = "0.1.0"
description = "GovAgent-IQ — an enterprise GDPR compliance & risk-mitigation engine built on ADK 2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "streamlit>=1.40.0",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/govagent"]
